# data-integration-and-visualization-platform

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  run.py
src/backend/: .dockerignore  Dockerfile  README.md  api.http  pyproject.toml  requirements-dev.txt  requirements.txt
src/backend/api/: __init__.py  database.py  dependencies.py  errors.py  main.py  settings.py  sql_helpers.py
src/backend/api/data_access/: __init__.py  author.py  charts.py  conference.py  journal.py  meta.py  year.py
src/backend/api/routers/: __init__.py  authors.py  charts.py  conferences.py  journals.py  meta.py  years.py
src/backend/api/schemas/: __init__.py  author.py  charts.py  common.py  conference.py  journal.py  meta.py  paper.py  year.py
src/backend/database/: __init__.py  db_backup.py  db_restore.py  docker_runtime.py  settings.py
src/backend/etl/: __init__.py  exporter.py  transformer.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: conftest.py  test_api.py  test_coverage_gaps.py  test_data_access.py  test_edge_cases.py  test_etl_pipeline.py  test_views.py
src/backend/tests/integration/fixtures/: seed.sql
src/backend/tests/integration/fixtures/etl_inputs/dblp_dataset/: input_article.csv  input_inproceedings.csv
src/backend/tests/integration/fixtures/etl_inputs/icore26_data/: iCore26_KilledColumnsForLoading.csv  icoreCategories.xlsx
src/backend/tests/unit/api/: test_errors.py  test_schemas.py
src/backend/tests/unit/etl/: test_acronym_generation.py  test_canonicalization.py  test_normalization.py
(+155 files in other folders)
