[project]
name = "backend"
version = "0.1.0"
description = "MYE030 Data Integration & Visualization Platform — backend (ETL + FastAPI)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "asyncmy>=0.2.10",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.0",
    "polars>=1.13.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.10.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "pyright>=1.1.380",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501", "B008"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["api", "etl", "database"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "raise RuntimeError",
]